fixed for CHLK-4263 Teacher. The tooltip overlaps lesson's plan name after pulling out

--- a/Chalkable.Web/assets/sass2/2_atoms/_tooltip.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_tooltip.sass
@@ -2,7 +2,7 @@
   position: absolute
   min-width: 55px
   display: none
-  z-index: 99999
+  z-index: 999999
 
   .tooltip-content
     background: rgba(0,0,0,0.8)
